[VTV-01]: Add dtos and models