@@ -1,13 +1,16 @@
 package com.vtv.inspection.repository;
 
 import com.vtv.inspection.model.document.InspectionDocument;
+import com.vtv.inspection.model.domain.AppointmentType;
 import com.vtv.inspection.model.domain.Inspection;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.stereotype.Repository;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Repository
@@ -33,10 +36,14 @@ public class InspectionRepositoryImpl implements InspectionRepository {
     }
 
     @Override
-    public List<Inspection> getByCarPlate(String carPlate) { //TODO: Ver si devolvemos lista o el ultimo o que devolvemos
-        final var inspections = mongoTemplate.find(Query.query(Criteria.where("carPlate").is(carPlate)), Inspection.class);
-        return inspections.stream().map(inspection ->
-                Inspection.builder()
+    public List<Inspection> getByCarPlateAndAppointmentType(String carPlate, AppointmentType type) { //TODO: Ver si devolvemos lista o el ultimo o que devolvemos
+        final var inspections =
+                mongoTemplate.find(Query.query(Criteria
+                        .where("carPlate").is(carPlate)
+                        .and("appointmentType").is(type)), Inspection.class);
+
+        return inspections.stream()
+                .map(inspection -> Inspection.builder()
                         .carPlate(inspection.getCarPlate())
                         .clientEmail(inspection.getClientEmail())
                         .dateTime(inspection.getDateTime())
@@ -44,7 +51,7 @@ public class InspectionRepositoryImpl implements InspectionRepository {
                         .clientEmail(inspection.getClientEmail())
                         .appointmentType(inspection.getAppointmentType())
                         .checkSteps(inspection.getCheckSteps())
-                        .build()
-        ).collect(Collectors.toList());
+                        .build())
+                .toList();
     }
 }
